Fixed long sentance word wraps

--- a/src/components/Chat/Chat.styl
+++ b/src/components/Chat/Chat.styl
@@ -83,6 +83,7 @@ channel-width=12rem;
         .Player {
             themed color fg
         }
+        word-wrap: break-word;
     }
 
     .timestamp {
