--- a/src/views/ChatView/ChatView.styl
+++ b/src/views/ChatView/ChatView.styl
@@ -27,6 +27,8 @@ channel-width=12rem;
     right: 0;
 
     display: flex;
+    width: 100vw;
+    max-width: 100vw;
     flex-direction: row;
 
 
@@ -56,8 +58,8 @@ channel-width=12rem;
         themed border-left-color shade3
     }
 
-    .EmbeddedChat {
-        flex-grow: 1;
+    .ChatLog {
+        flex: 1;
 
         position: relative;
         border-right: 1px solid transparent;
@@ -66,6 +68,8 @@ channel-width=12rem;
         min-height: 20rem;
         //themed border-right-color shade3
         //themed border-color shade3
+        word-wrap: break-word;
+        overflow-x: hidden;
         .input-container {
             border-bottom: 1px solid transparent;
         }
